fix: my portfolio portfolio-right will no jump into left anymore, problem with social container fixed

--- a/public/styles/portfolio.css
+++ b/public/styles/portfolio.css
@@ -33,7 +33,6 @@
 }
 
 .portfolio-right {
-  position: relative;
   border: none;
 }
 
@@ -81,6 +80,14 @@
 }
 
 /* social */
+.social-container {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 .project-link {
   text-decoration: none;
   color: inherit;
